tests/macros/input/extension.rs
fn main() {
    let q = inquisition::questions![input { extension: todo!() }];
}
